# uf-ahrs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: CI.yml
examples/: compare_outputs.rs  simple.rs
examples/broad_score/: Cargo.toml  justfile
examples/broad_score/src/: main.rs
examples/tbs-lucid-h7/: Cargo.toml
examples/tbs-lucid-h7/src/: main.rs
scripts/: broad_convert.py
src/: lib.rs  madgwick.rs  mahony.rs  mean_init_lfp.rs  traits.rs  vqf.rs
tests/: ahrs_test.rs
