[package]
name = "uf-ahrs"
version = "0.1.0"
edition = "2024"

description = "uf-ahrs  library for attitude and heading estimation using gyroscope, accelerometer and magnetometer."
keywords = ["ahrs", "imu", "madgwick", "mahony", "vqf"]
categories = ["embedded", "no-std"]
authors = ["Nickolai Novik <nickolainovik@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/jettify/uf-ahrs"
repository = "https://github.com/jettify/uf-ahrs"
readme = "README.md"

[dependencies]
idsp = "0.21.0"
libm = "0.2.15"
nalgebra = { version = "0.34.1", default-features = false, features = ["libm"] }

[dev-dependencies]
approx = "0.5.1"
rstest = "0.26.1"
