[package]
name = "broad_score"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.52.0", features = ["parquet"] }
polars-core = "0.52.0"
polars-io = "0.52.0"
uf-ahrs = { path = "../../" }
nalgebra = { version = "0.34.1", default-features = false, features = ["libm"] }
ahrs = "0.8.0"
glob = "0.3.3"
itertools = "0.14.0"
