[package]
name = "tbs_lucid_h7"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.6.0", features = [
  "stm32h743vi",
  "unstable-pac",
  "memory-x",
  "time-driver-tim4",
  "exti",
  "chrono",
] }
embassy-executor = { version = "0.10.0", features = [
  "platform-cortex-m",
  "executor-thread",
] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-sync = "0.8.0"
embassy-embedded-hal = "0.6.0"
cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
icm426xx = { version = "0.4.0", features = ["async"] }
uf-ahrs = { path = "../.." }
nalgebra = { version = "0.34.1", default-features = false, features = ["libm"] }


[profile.release]
codegen-units = 1
debug = 2
lto = 'fat'
opt-level = 's'

[features]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]
panic-probe = ["dep:panic-probe"]
default = ["debug"]
debug = [
  "defmt",
  "defmt-rtt",
  "panic-probe",
  "embassy-executor/defmt",
  "embassy-stm32/defmt",
]
